--- a/src/app/pages/students-page/students-page.component.html
+++ b/src/app/pages/students-page/students-page.component.html
@@ -7,7 +7,12 @@
   </div>
   <div class="col-8">
     <app-title />
-
-    <p>students-page works!</p>
+    <ul class="list-group">
+      <li class="list-group-item">Bart</li>
+      <li class="list-group-item">Goku</li>
+      <li class="list-group-item">Spiderman</li>
+      <li class="list-group-item">Homero</li>
+      <li class="list-group-item">Hulk</li>
+    </ul>
   </div>
 </div>
